# nixfromnpm

./: .bumpversion.cfg  .ghci  .gitignore  .gitmodules  .travis.yml  LICENSE  README.md  USAGE.txt  cabal.sandbox.config  checkdatafiles.py  default.nix  getclosure.nix  nixfromnpm.cabal  npm2nixhs.cabal  project.nix  release.nix  runtests.py  shell.nix  test.py  test.sh  top_packages.txt
.circleci/: config.yml
data/: buildNodePackage.nix  default.nix  fetchNodePackage.nix  no-xcode.patch  nodejs4.1.1.nix  removeImpureDependencies.js
docker/: Dockerfile
nix/: fetchNixpkgs.nix  hnix.nix  nixpkgs.nix  semver-range.nix  text-render.nix
nix-libraries/: nixpkgs  nodejs  nodejs-4.1.2.nix
nix-libraries/buildNodePackage/: default.nix  removeImpureDependencies.js
nix-libraries/nodeLib/: default.nix
nix-libs/: default.nix  fetch.py
nix-libs/buildNodePackage/: default.nix  find_package_json_dir.py  removeImpureDependencies.js
nix-libs/nodeLib/: .gitignore  build-node-package.nix  buildNodePackage.nix  checkPackageJson.js  circular_dependencies.md  default.nix  fetch.py  fetchUrlNamespaced.nix  fetchUrlWithHeaders.nix  installBinaries.py  parseNpmAuthTokens.nix  pyFetchurl.nix  removeImpureDependencies.js
nix-libs/nodeLib/tools/: check-package-json  execute-install-scripts  patch-dependencies
nix-libs/tools/: check-package-json  install-binaries
scripts/: gen_npm3
src/: .gitignore  Main.hs  NixFromNpm.hs  ParseSemVer.hs  Paths_nixfromnpm.hs  SemVer.hs
src/Filesystem/Path/: Wrappers.hs
src/NixFromNpm/: Cli.hs  Common.hs  Conversion.hs  ConvertToNix.hs  GitTypes.hs  HttpTools.hs  Merge.hs  NixExpr.hs  NpmLookup.hs  NpmTypes.hs  NpmVersion.hs  Options.hs  PackageMap.hs  ParseNpmVersion.hs  ParseSemVer.hs  SemVer.hs
src/NixFromNpm/Conversion/: ConvertDirectory.hs  ToDisk.hs  ToNix.hs
src/NixFromNpm/Git/: Types.hs
src/NixFromNpm/Npm/: PackageMap.hs  Resolve.hs  Settings.hs  Types.hs  Version.hs
src/NixFromNpm/Npm/Version/: Parser.hs
src/NixFromNpm/Parsers/: Common.hs  Nix.hs  NpmVersion.hs  SemVer.hs
test/: SpecHelper.hs
test-nodepkgs/: default.nix
test-nodepkgs/nodeLib/: buildNodePackage.nix  checkPackageJson.js  fetchUrlWithHeaders.nix
test-nodepkgs/nodePackages/: default.nix
test-nodepkgs/nodePackages/d/: 0.1.1.nix  latest.nix
test-nodepkgs/nodePackages/es5-ext/: 0.10.12.nix  latest.nix
test-nodepkgs/nodePackages/es6-iterator/: 2.0.0.nix  latest.nix
test-nodepkgs/nodePackages/es6-symbol/: 3.1.0.nix  latest.nix
test-nodepkgs/nodePackages/lodash/: 4.15.0.nix  latest.nix
test/NixFromNpm/: FromJsonSpec.hs  SemVerSpec.hs
test/test_data/: test.json
tests/: Unit.hs
