name:                nixfromnpm
version:             0.10.1
synopsis:            Generate nix expressions from npm packages.
description:
  Given an npm package name and one or more npm repositories, will dump out a
  collection of nix files, one each for the initial package and all of its
  dependencies. Will generate a top-level 'default.nix' which returns a set
  containing all of these expressions. Subsequent invocations of the program
  using the same target directory will result in re-use of the existing files,
  to avoid unnecessary duplication.
license:             MIT
license-file:        LICENSE
author:              Allen Nelson
maintainer:          anelson@narrativescience.com
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/adnelson/nixfromnpm/issues
Category:            Tools, Nix

data-files:   nix-libs/nodeLib/default.nix
            , nix-libs/nodeLib/buildNodePackage.nix
            , nix-libs/nodeLib/removeImpureDependencies.js
            , nix-libs/nodeLib/checkPackageJson.js
            , nix-libs/nodeLib/fetchUrlWithHeaders.nix
            , nix-libs/nodeLib/installBinaries.py
            , nix-libs/nodeLib/fetch.py
            , nix-libs/nodeLib/npm3.tar.gz
            , top_packages.txt

source-repository head
  type:     git
  location: git://github.com/adnelson/nixfromnpm.git

executable nixfromnpm
  main-is:             Main.hs
  other-extensions:    FlexibleContexts
                     , FlexibleInstances
                     , LambdaCase
                     , NoImplicitPrelude
                     , NoMonomorphismRestriction
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TypeFamilies
                     , TypeSynonymInstances
                     , ViewPatterns
  build-depends:       base >=4.8 && <4.9
                     , classy-prelude
                     , text
                     , bytestring
                     , mtl
                     , unordered-containers
                     , containers
                     , parsec
                     , aeson
                     , data-default
                     , shelly
                     , MissingH
                     , text-render
                     , system-filepath
                     , network-uri
                     , directory
                     , hnix >=0.2.3
                     , optparse-applicative
                     , curl
                     , temporary
                     , SHA
                     , monad-control
                     , lifted-base
                     , transformers
                     , unix
                     , ansi-terminal
                     , semver-range
                     , data-fix
  hs-source-dirs:      src
  default-language:    Haskell2010
