name:                nixfromnpm
version:             0.13.0
synopsis:            Generate nix expressions from npm packages.
description:
  Given an npm package name and one or more npm repositories, will dump out a
  collection of nix files, one each for the initial package and all of its
  dependencies. Will generate a top-level 'default.nix' which returns a set
  containing all of these expressions. Subsequent invocations of the program
  using the same target directory will result in re-use of the existing files,
  to avoid unnecessary duplication.
license:             MIT
license-file:        LICENSE
author:              Allen Nelson
maintainer:          anelson@narrativescience.com
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/adnelson/nixfromnpm/issues
Category:            Tools, Nix

data-files:   nix-libs/nodeLib/buildNodePackage.nix
            , nix-libs/nodeLib/circular_dependencies.md
            , nix-libs/nodeLib/default.nix
            , nix-libs/nodeLib/fetch.py
            , nix-libs/nodeLib/fetchUrlNamespaced.nix
            , nix-libs/nodeLib/tools/check-package-json
            , nix-libs/nodeLib/tools/install-binaries
            , nix-libs/nodeLib/tools/patch-dependencies
            , nix-libs/nodeLib/tools/execute-install-scripts


source-repository head
  type:     git
  location: git://github.com/adnelson/nixfromnpm.git

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     NixFromNpm
                     , NixFromNpm.Cli
                     , NixFromNpm.Common
                     , NixFromNpm.Conversion.ToDisk
                     , NixFromNpm.Conversion.ToNix
                     , NixFromNpm.Git.Types
                     , NixFromNpm.Npm.PackageMap
                     , NixFromNpm.Npm.Types
                     , NixFromNpm.Npm.Version
                     , NixFromNpm.Options
  other-modules:       Filesystem.Path.Wrappers
                     , NixFromNpm.HttpTools
                     , NixFromNpm.Merge
                     , NixFromNpm.Npm.Resolve
                     , Paths_nixfromnpm
  other-extensions:    NoImplicitPrelude
  build-depends:       base >=4.8 && < 5.0
                     , classy-prelude
                     , mono-traversable
                     , text
                     , bytestring
                     , mtl
                     , unordered-containers
                     , containers
                     , parsec
                     , aeson
                     , data-default
                     , shelly
                     , MissingH
                     , text-render
                     , system-filepath
                     , network-uri
                     , directory
                     , hnix >=0.4.0
                     , optparse-applicative
                     , curl
                     , temporary
                     , SHA
                     , monad-control
                     , lifted-base
                     , transformers
                     , unix
                     , ansi-terminal
                     , semver-range >=0.2.7
                     , data-fix
                     , pcre-heavy
                     , exceptions
  default-language:    Haskell2010

executable nixfromnpm
  default-language:    Haskell2010
  other-extensions:    NoImplicitPrelude
  main-is:             src/Main.hs
  build-depends:       base >=4.8 && < 5.0
                     , optparse-applicative
                     , nixfromnpm

test-suite unit-tests
  default-language: Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Unit.hs
  other-extensions:    NoImplicitPrelude
                     , OverloadedStrings
  build-depends:       base >=4.8 && < 5.0
                     , classy-prelude
                     , mono-traversable
                     , aeson
                     , bytestring
                     , hnix
                     , text
                     , hspec
                     , QuickCheck
                     , neat-interpolation
                     , nixfromnpm
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
